<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.sign.SignInFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_logo_top"
        android:backgroundTint="@color/orange_color"
        android:clickable="false"
        android:paddingHorizontal="@dimen/padding_logo_horizontal"
        android:paddingVertical="@dimen/padding_logo_vertical"
        android:text="@string/logo_text"
        android:textStyle="bold"
        app:cornerRadius="@dimen/corner_logo_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fooder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_fooder"
        android:text="@string/fooder"
        android:textColor="@color/dark_color"
        android:textSize="@dimen/text_medium_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_screen"
        android:layout_marginTop="@dimen/margin_fooder"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/corner_box_radius"
        app:boxCornerRadiusBottomStart="@dimen/corner_box_radius"
        app:boxCornerRadiusTopEnd="@dimen/corner_box_radius"
        app:boxCornerRadiusTopStart="@dimen/corner_box_radius"
        app:boxStrokeColor="@color/orange_color"
        app:hintTextColor="@color/orange_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fooder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/add_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_screen"
        android:layout_marginTop="@dimen/margin_fooder"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/corner_box_radius"
        app:boxCornerRadiusBottomStart="@dimen/corner_box_radius"
        app:boxCornerRadiusTopEnd="@dimen/corner_box_radius"
        app:boxCornerRadiusTopStart="@dimen/corner_box_radius"
        app:boxStrokeColor="@color/orange_color"
        app:hintTextColor="@color/orange_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_password"
            android:inputType="textPassword"
            android:textColor="@color/dark_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_screen"
        android:layout_marginTop="@dimen/margin_fooder"
        android:backgroundTint="@color/orange_color"
        android:paddingVertical="@dimen/padding_box_vertical"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="@dimen/corner_box_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <TextView
        android:id="@+id/already_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_register"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />


</androidx.constraintlayout.widget.ConstraintLayout>