<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".category.page.CategoryListFragment">

    <TextView
        android:id="@+id/change_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_screen"
        android:layout_marginTop="@dimen/margin_screen"
        android:paddingBottom="@dimen/margin_fooder"
        android:text="@string/change_products"
        android:textColor="@color/dark_color"
        android:textSize="@dimen/text_large_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_screen"
        app:cardBackgroundColor="@color/grey_color"
        app:cardCornerRadius="@dimen/corner_box_radius"
        app:cardElevation="@dimen/box_shadow_elevation"
        app:layout_constraintTop_toBottomOf="@id/change_products">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/arrow_right"
                android:layout_width="@dimen/zero_size"
                android:layout_height="@dimen/search_button_size"
                android:layout_marginStart="@dimen/margin_box"
                android:layout_weight="1"
                android:background="@drawable/ic_baseline_search_24"
                android:backgroundTint="@color/grey_string_color"
                android:scaleX="@integer/scale_button"
                android:scaleY="@integer/scale_button_y" />

            <TextView
                android:id="@+id/category_item"
                android:layout_width="@dimen/zero_size"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center|start"
                android:paddingStart="@dimen/padding_small_horizontal"
                android:text="@string/search"
                android:textColor="@color/grey_string_color"
                android:textSize="@dimen/text_small_size" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/pick_dish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_screen"
        android:layout_marginTop="@dimen/margin_fooder"
        android:layout_marginBottom="@dimen/margin_box"
        android:backgroundTint="@color/orange_color"
        android:elevation="@dimen/box_shadow_elevation"
        android:paddingVertical="@dimen/padding_box_vertical"
        android:text="@string/pick_dish"
        android:textAlignment="center"
        android:textColor="@color/white"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_recycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        android:paddingTop="@dimen/padding_box_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_search" />


    <ProgressBar
        android:id="@+id/progress_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:endColor="@color/orange_color"
        android:startColor="@color/orange_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>